<resources>
    <string name="app_name">简婚</string>
    <string name="app_name2">简婚-结婚助手</string>

    <!-- 新浪微博 -->
    <string name="sina_key">3550077632</string>
    <string name="sina_secret">5cd47b687c0dcd4f079c118ae9877044</string>

    <!--  淘宝百川  -->
    <string name="tb_key">23346402</string>
    <string name="tb_secret">66082c405d5242a3364f34a3ad60feab</string>

    <string name="action_settings">Settings</string>
    <string name="hit_input_phone">请输入您的手机号</string>
    <string name="hit_input_pwd">请输入您的登录密码</string>
    <string name="hit_input_pwd2">请设置新的登录密码</string>
    <string name="hit_input_pwd3">确认新的登录密码</string>
    <string name="hit_input_rcode">请输入验证码</string>
    <string name="send_againt">重新获取</string>
    <string name="send_code">发送验证码</string>
    <string name="code_error">验证码错误</string>
    <string name="submit_code">提交验证码成功</string>
    <string name="send_code_finish">验证码已经发送</string>
    <string name="send_code_error">验证码错误</string>
    <string name="input_phone">请输入您的手机号</string>
    <string name="input_phone_right">请输入正确的手机号码</string>
    <string name="password_6_20">密码长度不能小于6位或者大于20位</string>
    <string name="input_code">请输入手机验证码</string>
    <string name="input_right_code">请输入正确的手机验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_rpassword">请输入确认密码</string>
    <string name="login">登录</string>
    <string name="login2">立即登录</string>
    <string name="signout">退出登录</string>
    <string name="favorite">收藏</string>
    <string name="free_register">免费注册</string>
    <string name="froget_pwd">忘记密码?</string>
    <string name="find_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="register_agreement">用户协议</string>

    <string name="search">搜索</string>
    <string name="choice">精选</string>
    <string name="latest">最新</string>
    <string name="save">保存</string>
    <string name="shop">商户</string>
    <string name="good">优婚品</string>

    <string name="eidt_userhead">编辑头像</string>
    <string name="nickname">昵称</string>
    <string name="marstate">当前婚礼状态</string>
    <string name="mardate">婚期</string>
    <string name="live_city">所在城市</string>
    <string name="address">收货地址</string>
    <string name="persion_info">个人简介</string>

    <string name="fmt_money">￥%1$s</string>
    <string name="fmt_total_num">总共%1$s份礼金</string>
    <string name="fmt_total_money">总计:￥%1$s</string>
  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <array name="marstates">
        <item>婚礼筹备</item>
        <item>婚宴准备</item>
        <item>婚礼前一天</item>
        <item>结婚当天</item>
    </array>

    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_shop_adweb_view">详情</string>
</resources>
