<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/lib_toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_eeeeee"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/eidt_userhead"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <com.mhh.lib.view.CircleImageView3
                    android:id="@+id/ivHead"
                    android:layout_width="@dimen/head_whsm"
                    android:layout_height="@dimen/head_whsm"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="34dp"
                    android:layout_marginRight="34dp"
                    android:scaleType="centerCrop"
                    app:border_color="@color/c_eeeeee"
                    app:border_width="1.5dp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/nickname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/marstate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:clickable="false"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="14dp"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/mardate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <TextView
                    android:id="@+id/tvMarDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/live_city"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <TextView
                    android:id="@+id/tvLCity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />

            <FrameLayout
                android:id="@+id/vitem7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:text="@string/persion_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/c_808080" />

                <TextView
                    android:id="@+id/tvPersionInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:drawableEnd="@drawable/ic_right_black"
                    android:drawableRight="@drawable/ic_right_black"
                    android:gravity="center_vertical"
                    android:paddingEnd="14dp"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingStart="14dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/c_line" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="24dp"
                android:background="@color/c_line" />


            <TextView
                android:id="@+id/tvSignout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/signout"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="40dp"
                android:background="@color/c_line" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>