<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/lib_toolbar_guid" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:hint="@string/hit_input_phone">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/xml_login_etbg"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/icon_phone"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/c_9a9a9a" />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hit_input_rcode">

                    <EditText
                        android:id="@+id/etRecode"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@drawable/xml_login_etbg"
                        android:drawableLeft="@drawable/icon_rcode"
                        android:drawablePadding="20dp"
                        android:drawableStart="@drawable/icon_rcode"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:paddingEnd="90dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="90dp"
                        android:paddingStart="20dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/light_black"
                        android:textColorHint="@color/c_9a9a9a" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvGetRcode"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="获取验证码"
                    android:textColor="@color/c_ff8f00" />

            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hit_input_pwd2">

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/xml_login_etbg"
                    android:drawableLeft="@drawable/icon_pwd"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/icon_pwd"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/c_9a9a9a" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hit_input_pwd3">

                <EditText
                    android:id="@+id/etRNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/xml_login_etbg"
                    android:drawableLeft="@drawable/icon_pwd"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/icon_pwd"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/light_black"
                    android:textColorHint="@color/c_9a9a9a" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/xml_login_btnbg"
                android:clickable="true"
                android:elevation="2dp"
                android:gravity="center"
                android:text="确认修改"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>